Adding examples to illustrate performance issues